<resources>
    <string name="app_name">Capstone C22-PS353</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="price">Price</string>
    <string name="profile">Profile</string>

    <!--    login page-->
    <string name="username_tlp">Username / No. Telp</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="welcome">Selamat datang di BumiTani</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="register">Daftar</string>

    <!--    register page-->
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="phone_number">Nomor Ponsel</string>
    <string name="have_account">Sudah punya akun?</string>

    <!--    for image content description-->
    <string name="back">back button</string>
    <string name="beras">Beras</string>
    <string name="kategori">Kategori</string>
    <string name="prediksi_harga_esok">Prediksi Harga Esok</string>
    <string name="bawang_merah">Bawang Merah</string>
    <string name="bawang_putih">Bawang Putih</string>
    <string name="cabai_merah">Cabai Merah</string>
    <string name="cabai_rawit">Cabai Rawit</string>
    <string name="produk_pilihan">Produk Pilihan</string>
    <string name="button_cart">Button_Cart</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="button_back">button_back</string>
    <string name="image_avatar">Image Avatar</string>
    <string name="email">Email</string>
    <string name="checkbox">Checkbox</string>
    <string name="checkout">Checkout</string>
    <string name="minus">kurangi item</string>
    <string name="plus">tambah item</string>


    <string name="sample_profile">https://cdn.discordapp.com/attachments/981949351750422589/982182745079959582/sampleProfile.png</string>
    <string name="sample_username">John Kennedy</string>
    <string name="sampe_email">johnkennedy@gmail.com</string>
    <string name="general">General</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="riwayat">Riwayat</string>
    <string name="personal">Personal</string>

    <string name="beras1">Beras Kualitas I</string>
    <string name="beras2">Beras Kualitas II</string>
    <string name="beras3">Beras Kualitas III</string>

    <string name="bawangM">Bawang Merah Ukuran Sedang</string>

    <string name="bawangP">Bawang Putih Ukuran Sedang</string>

    <string name="cabaiM1">Cabai Merah Besar</string>
    <string name="cabaiM2">Cabai Merah Keriting</string>

    <string name="cabaiR1">Cabai Rawit Hijau</string>
    <string name="cabaiR2">Cabai Rawit Merah</string>
    <!--    drop down category di price page-->
    <string-array name="data_category">
        <item>Beras</item>
        <item>Bawang Merah</item>
        <item>Bawang Putih</item>
        <item>Cabai Merah</item>
        <item>Cabai Rawit</item>
    </string-array>

    <string-array name="data_title_product">
        <item>Beras Raja Lele SUPER</item>
        <item>Cabai Merah Keriting</item>
        <item>Bawang Merah Jawa</item>
        <item>Beras Maknyus</item>
        <item>Beras Anak Daro SUPER</item>
        <item>Cabai Rawit Hijau</item>
        <item>Bawang Putih</item>
        <item>Cabai Merah Besar</item>
    </string-array>

    <string-array name="data_price_product">
        <item>Rp 11.500/kg</item>
        <item>Rp 47.000/kg</item>
        <item>Rp 37.600/kg</item>
        <item>Rp 10.100/kg</item>
        <item>Rp 13.000/kg</item>
        <item>Rp 70.000/kg</item>
        <item>Rp 31.000/kg</item>
        <item>Rp 71.000/kg</item>
    </string-array>

    <string-array name="data_location_product">
        <item>Kota Bandung</item>
        <item>Kab. Sidoarjo</item>
        <item>Kota Surabaya</item>
        <item>Kab. Cirebon</item>
        <item>Kab. Kampar</item>
        <item>Bandung</item>
        <item>Kab. Kampar</item>
        <item>Semarang</item>
    </string-array>

    <string-array name="data_image_product">
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981950549513625680/sample_beras.jpg</item>
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981949741426409492/sample_cabai_cropped.jpg</item>
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981950006489657354/sample_bawangmerah.jpg</item>
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981950045219881000/sample_beras_harumas.jpg</item>
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981949933215162438/sample_beras_anakdaro.jpg</item>
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981958109083865129/sample_cabai_rawit.jpg</item>
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981949972587085955/sample_bawang_putih.jpg</item>
        <item>https://cdn.discordapp.com/attachments/981949351750422589/981960527989309440/sample_cabai_besar.jpg</item>
    </string-array>

    <string-array name="dummy_day_label">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Mei</item>
    </string-array>

    <string-array name="dummy_day">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
    </string-array>

    <string-array name="dummy_date">
        <item>06-06-2022</item>
        <item>07-06-2022</item>
        <item>08-06-2022</item>
        <item>09-06-2022</item>
        <item>10-06-2022</item>
        <item>11-06-2022</item>
        <item>12-06-2022</item>
    </string-array>

    <integer-array name="dummy_price">
        <item>8450</item>
        <item>8500</item>
        <item>8450</item>
        <item>8350</item>
        <item>8300</item>
    </integer-array>

    <integer-array name="dummy_shipment_cost">
        <item>70000</item>
        <item>65000</item>
        <item>80000</item>
        <item>60000</item>
        <item>90000</item>
    </integer-array>


    <!--    <array name="dummy_price">-->
    <!--        <item>10500</item>-->
    <!--        <item>10200</item>-->
    <!--        <item>Rab</item>-->
    <!--        <item>Kam</item>-->
    <!--        <item>Jum</item>-->
    <!--        <item>Sab</item>-->
    <!--        <item>Min</item>-->
    <!--    </int-array>-->

    <!--    10000))-->
    <!--    priceList.add(PriceList("Sel", 10500))-->
    <!--    priceList.add(PriceList("Rab", 10200))-->
    <!--    priceList.add(PriceList("Kam", 11000))-->
    <!--    priceList.add(PriceList("Jum", 11400))-->
    <!--    priceList.add(PriceList("Sab", 11100))-->
    <!--    priceList.add(PriceList("Min", 12000))-->

    <string name="cart">Cart</string>
    <string name="select_all">Pilih Semua</string>
    <string name="edit">Edit</string>
    <string name="total">Total :</string>
    <string name="value">Jumlah</string>
    <string name="presentase">1% - Rp1500</string>
    <string name="test">test</string>
    <string name="appname">Bumi Tani</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lokasi">Lokasi</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus in commodo metus egestas libero adipiscing sit.</string>

    <!--    History page-->
    <string name="history">Riwayat Pesanan</string>
    <string name="qty">Quantity</string>
    <string name="buy_again">Beli Lagi</string>
    <string name="history_date">Tanggal</string>
    <string name="stok">Stok</string>
    <string name="dummy_stock">100</string>
    <string name="tambah_ke_keranjang">Tambah ke Keranjang</string>
    <string name="jumlah">Jumlah</string>
    <string name="masukkan_keranjang">Masukkan Keranjang</string>

    <string name="address">Alamat</string>
    <string name="full_address">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pellentesque facilisis convallis. Sed scelerisque ex erat, quis congue lorem tempor et. Donec et sapien porta, ullamcorper mi nec, interdum nulla. Phasellus sit amet lobortis libero, in fringilla purus. Integer aliquam fermentum eleifend. Suspendisse sit amet congue risus, a rhoncus odio. Mauris ut felis erat.</string>
    <string name="item">Item</string>
    <string name="pengiriman">Pilih Pengiriman</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="next">Lanjut</string>
    <string name="jne">JNE (Rp 80.000)</string>
    <string name="tiki">TIKI (Rp 60.000)</string>
    <string name="jnt">JNT (Rp 90.000)</string>
    <string name="payment">Pembayaran</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_price">*Rp total*</string>
    <string name="bank_account">BCA Bank Transfer</string>
    <string name="no_rekening">061 316 8441</string>
    <string name="account_name">PT. BUMITANI BANGKIT SENTOSA</string>
    <string name="pay_before">*Bayar sebelum dd-mm-yy-time*</string>
    <string name="to_home">Kembali ke Beranda</string>
    <string name="done_transfer">Saya Sudah Transfer</string>
    <string name="lanjutkan_pemesanan">Lanjutkan Pemesanan</string>
    <string name="logout">LogOut</string>
    <string name="keluar">Keluar</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="total_harga_pesanan">Total Harga Pesanan</string>
    <string name="melanjutkan_ke_pembayaran">Melanjutkan Ke Pembayaran</string>
    <string name="total_pesanan">Total Pesanan (1 Kg)</string>
    <string name="total_biaya_pengiriman">Total Biaya Pengiriman</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="si_cepat">Si Cepat (Rp 70.000)</string>
    <string name="id_express">ID Express (Rp 65.000)</string>
    <string name="pilih_pengiriman">Pilih Pengiriman</string>
    <string name="harga_awal">Rp 0</string>
    <string name="alamat_null">Anda Belum memasukkan Alamat (Klik disini untuk memasukkan alamat)</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="cancel">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="feature_under_development">Feature Under Development</string>
    <string name="umum">Umum</string>
    <string name="privasi">Privasi</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="bumitani">BumiTani</string>


</resources>